[package]
name = "auditor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.21.0", features = ["extension-module"] }
actix-web = "4.5.1"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
rayon = "1.10.0"

[lib]
name = "auditor_lib"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "web"
path = "src/web/main.rs"
